[package]
name = "misang"
version = "0.1.0"
authors = ["Tokarev Artem <tokarev28.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
rand = "0.8.4"
rand_pcg = "0.3.1"
statrs = "0.15"
nalgebra = "0.29"
